# ibrain_nav

./: README.md
ibrain/: CMakeLists.txt  package.xml
ibrain/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ibrain/gazebo/: whbot_physics.gazebo
ibrain/launch/: gazebo.launch  localization.launch  mapping.launch  movebase.launch  rtab_mapping.launch  rviz.launch  turtle.launch
ibrain/maps/: file.pgm  file.yaml  room1.pgm  room1.yaml  room2.pgm
ibrain/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ibrain/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  ibrain.xacro
